# bioinformatics

./: README.md
rosalind-long/: CHANGELOG.md  rosalind-long.cabal
rosalind-long/app/: Main.hs
rosalind-long/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
rosalind_lexf/: Cargo.toml
rosalind_lexf/src/: main.rs
rosalind_lgis/: CHANGELOG.md  LICENSE  rosalind-lgis-input.txt  rosalind-lgis.cabal
rosalind_lgis/app/: Main.hs
rosalind_lgis/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
rosalind_splc/: Cargo.toml  rosalind_splc.fasta
rosalind_splc/src/: main.rs
