cabal-version:      3.12
name:               rosalind-long
version:            0.1.0.0
license:            NONE
author:             ibonny
maintainer:         ibonny@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable rosalind-long
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
