cabal-version: 3.0
name: rosalind-lgis
version: 0.1.0.0
license: MIT
license-file: LICENSE
author: ibonny
maintainer: ibonny@gmail.com
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

executable rosalind-lgis
  import: warnings
  main-is: Main.hs
  build-depends: base ^>=4.18.3.0
               , array
  hs-source-dirs: app
  default-language: Haskell2010
